master: IoC StructureMap was added, little refactoring was accomplished

--- a/CQRS_DataStorage_WebApi/CQRSDataStorage.DAL.Abstractions/CQRSDataStorage.DAL.Abstractions.csproj
+++ b/CQRS_DataStorage_WebApi/CQRSDataStorage.DAL.Abstractions/CQRSDataStorage.DAL.Abstractions.csproj
@@ -8,4 +8,10 @@
     <ProjectReference Include="..\CQRSDataStorage.Domain\CQRSDataStorage.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Cassandra">
+      <HintPath>C:\Users\Artem_Alieinikov\.nuget\packages\cassandracsharpdriver\3.7.0\lib\netstandard1.5\Cassandra.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
