master: EmployeeColumnFamilyMapping was refactored, IoC dependencies were binded

--- a/CQRS_DataStorage_WebApi/CQRSDataStorage.DAL.Abstractions/CQRSDataStorage.DAL.Abstractions.csproj
+++ b/CQRS_DataStorage_WebApi/CQRSDataStorage.DAL.Abstractions/CQRSDataStorage.DAL.Abstractions.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CassandraCSharpDriver" Version="3.7.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CQRSDataStorage.Domain\CQRSDataStorage.Domain.csproj" />
