--- a/CQRS_DataStorage_WebApi/CQRS_DataStorage_WebApi/CQRSDataStorage.WebApi.csproj
+++ b/CQRS_DataStorage_WebApi/CQRS_DataStorage_WebApi/CQRSDataStorage.WebApi.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CassandraCSharpDriver" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
     <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="1.4.0" />
