--- a/CQRS_DataStorage_WebApi/CQRS_DataStorage_WebApi/appsettings.json
+++ b/CQRS_DataStorage_WebApi/CQRS_DataStorage_WebApi/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "CassandraClusterContactPoints": "127.0.0.1"
 }
