--- a/CQRS_DataStorage_WebApi/CQRSDataStorage.WebApi/CQRSDataStorage.WebApi.csproj
+++ b/CQRS_DataStorage_WebApi/CQRSDataStorage.WebApi/CQRSDataStorage.WebApi.csproj
@@ -13,9 +13,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
     <PackageReference Include="StructureMap.Microsoft.DependencyInjection" Version="1.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CQRSDataStorage.Commands\CQRSDataStorage.Commands.csproj" />
     <ProjectReference Include="..\CQRSDataStorage.DAL\CQRSDataStorage.DAL.csproj" />
     <ProjectReference Include="..\CQRSDataStorage.DependenciesCore\CQRSDataStorage.DependenciesCore.csproj" />
   </ItemGroup>
